--- a/Iris-Tensorflow.ipynb
+++ b/Iris-Tensorflow.ipynb
@@ -2,22 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Marcos\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn import datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo de uso de tensorflow para predecir el dataset Iris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = datasets.load_iris()\n",
+    "\n",
+    "#Obtener las variables y la clase.\n",
+    "x = data.data\n",
+    "y = data.target\n",
+    "\n",
+    "#Crear un dataframe con los datos.\n",
+    "df = pd.DataFrame(data.data,columns=['sepal_length', 'sepal_width','petal_length', 'petal_width'])\n",
+    "df['class'] = data.target\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = tf.placeholder(shape=[None, 4], dtype=tf.float32)\n",
+    "\n"
    ]
   }
  ],
